--- a/pom.xml
+++ b/pom.xml
@@ -38,23 +38,23 @@
       <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-math3</artifactId>
-         <version>3.3</version>
+         <version>3.6.1</version>
       </dependency>
       <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
-         <version>2.7</version>
+         <version>2.8.6</version>
       </dependency>
       <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.8.1</version>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <version>5.7.0</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.mockito</groupId>
-         <artifactId>mockito-all</artifactId>
-         <version>2.0.2-beta</version>
+         <artifactId>mockito-core</artifactId>
+         <version>3.5.13</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
@@ -106,6 +106,11 @@
                   </configuration>
                </execution>
             </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
          </plugin>
       </plugins>
    </build>
