Update magmaProxy to 2.1.4
For consistency:
- Also print the version on startup
- Use lowercase names for groupId and artifactId

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,15 @@ util/excel/~$*.*
 .idea/**/watcherTasks.xml
 .idea/dictionaries
 /buildDefault
+.idea/**/uiDesigner.xml
+.idea/libraries
+.idea/artifacts
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
+*.ipr
 
 test.xml
 /result.properties
