--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>magmaOffenburg</groupId>
-   <artifactId>magmaFatProxy</artifactId>
+   <groupId>magmaoffenburg</groupId>
+   <artifactId>magmafatproxy</artifactId>
    <packaging>jar</packaging>
    <version>1.2.0</version>
    <name>magmaFatProxy</name>
@@ -31,9 +31,9 @@
          <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>magmaOffenburg</groupId>
-         <artifactId>magmaProxy</artifactId>
-         <version>2.1.3</version>
+         <groupId>magmaoffenburg</groupId>
+         <artifactId>magmaproxy</artifactId>
+         <version>2.1.4</version>
       </dependency>
       <dependency>
          <groupId>org.apache.commons</groupId>
@@ -101,7 +101,7 @@
                      <descriptors>
                         <descriptor>src/assembly/release.xml</descriptor>
                      </descriptors>
-                     <finalName>magmaFatProxy</finalName>
+                     <finalName>${project.artifactId}-${project.version}</finalName>
                      <appendAssemblyId>false</appendAssemblyId>
                   </configuration>
                </execution>
