--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        distribution: 'temurin'
+        java-version: 8
     - name: Build with Maven
       run: ./mvnw --batch-mode --errors --fail-at-end --show-version package
